fix: full bleed for how-it-works

--- a/assets/css/src/parts/terraso.scss
+++ b/assets/css/src/parts/terraso.scss
@@ -64,6 +64,7 @@
   * Content well
   */
 .entry-content > div:not(.full-bleed),
+.how-it-works.full-bleed > *,
 .announcement.full-bleed > *,
 .tg-header-sticky-wrapper {
 	max-width: 1200px;
